# flower-species

./: README.md  pyproject.toml
backend/django_app/mainapp/: settings.py  urls.py
backend/django_app/prediction/: views.py
backend/mainapp/mainapp/: settings.py
