[tool.poetry]
name = "flower-species"
version = "0.1.0"
description = "A Machine Learning app to classify flowers based on sepal and petal dimensions"
authors = ["Samwel Kanda"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.1"
djangorestframework = "3.11.1"
django-rest-auth = "0.9.5"
django-cors-headers = "3.5.0"
psycopg2-binary = "2.8.5"
pandas = "1.1.1"
scikit-learn = "0.23.2"
joblib = "0.16.0"
gunicorn = "20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
